--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/WeatherApp/nbproject/private/
+/WeatherApp/build/
+/WeatherApp/dist/
+/WebApplication1/nbproject/private/
+/WebApplication1/build/
+/WebApplication1/dist/
+/WebApplication2/nbproject/private/
+/WebApplication2/build/
+/WebApplication2/dist/
+/mavenproject1/target/
+/WeatherApp/target/
+/CityweatherApp/target/
+/Cityweather/target/
+/Cityweather/nbproject/
