--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,11 +13,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 1.8
+    - name: STEP 1 -> Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: '1.8'
         distribution: 'adopt'
         cache: maven
-    - name: Build with Maven
-      run: mvn --file ./Cityweather/pom.xml clean install
+    - name: STEP 2 -> Build with Maven
+      run: mvn --file ./Cityweather/pom.xml clean instalL
+    - name: STEP 3 -> Test wih Maven
+      run: mvn --file ./Cityweather/pom.xml test
