--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,19 @@ jobs:
         java-version: '1.8'
         distribution: 'adopt'
         cache: maven
+    - name: Install Heroku CLI
+      run: curl https://cli-assets.heroku.com/install.sh | sh
+    - name: Log in to Heroku
+      run: heroku login -i
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+    - name: Create a new Heroku app
+      run: heroku create
     - name: STEP 2 -> Build with Maven
       run: mvn --file ./Cityweather/pom.xml clean install
-    - name: STEP 3 -> Test wih Maven
+    - name: STEP 3 -> Test with Maven
       run: mvn --file ./Cityweather/pom.xml test
+    - name: Deploy to Heroku
+      run: mvn heroku:deploy
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
