--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,8 @@ jobs:
       run: heroku login -i
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-    - name: Create a new Heroku app
-      run: heroku create
+    - name: Set Heroku Git remote
+      run: heroku git:remote -a weatherapp-heroku
     - name: STEP 2 -> Build with Maven
       run: mvn --file ./Cityweather/pom.xml clean install
     - name: STEP 3 -> Test with Maven
