--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,9 @@ jobs:
     - name: Install Heroku CLI
       run: curl https://cli-assets.heroku.com/install.sh | sh
     - name: Log in to Heroku
-      run: heroku login -i
+      run: |
+        heroku access -a weatherapp-kalilo
+        heroku login -i
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
     - name: Set Heroku Git remote
