--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,6 +11,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+
     steps:
     - uses: actions/checkout@v3
     - name: STEP 1 -> Set up JDK 1.8
@@ -19,23 +22,21 @@ jobs:
         java-version: '1.8'
         distribution: 'adopt'
         cache: maven
-    - name: Install Heroku CLI
-      run: curl https://cli-assets.heroku.com/install.sh | sh
     - name: Debug HEROKU_API_KEY
       run: echo $HEROKU_API_KEY
-    - name: Log in to Heroku
-      run: |
-        heroku access -a weatherapp-kalilo
-        heroku login -i
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-    - name: Set Heroku Git remote
-      run: heroku git:remote -a weatherapp-heroku
-    - name: STEP 2 -> Build with Maven
+    - name: STEP 2 -> Login to Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_app_name: "weatherapp-kalilo"
+    - name: STEP 3 -> Build with Maven
       run: mvn --file ./Cityweather/pom.xml clean install
-    - name: STEP 3 -> Test with Maven
+    - name: STEP 4 -> Test wih Maven
       run: mvn --file ./Cityweather/pom.xml test
-    - name: Deploy to Heroku
-      run: mvn heroku:deploy
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+    - name: STEP 5 -> Deploy to Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_app_name: "weatherapp-kalilo"
+        heroku_email: "you@example.com"
+        heroku_jar_file: "./Cityweather/target/Cityweather-1.0-SNAPSHOT-jar-with-dependencies.jar"
