--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,13 +31,13 @@ jobs:
         heroku_app_name: "weatherapp-kalilo"
         heroku_email: "kalilo555@usp.br"
     - name: STEP 3 -> Build with Maven
-      run: cd cityweather && mvn --file ./pom.xml clean install
+      run: mvn --file ./pom.xml clean install
     - name: STEP 4 -> Test with Maven
-      run: cd cityweather && mvn --file ./pom.xml test
+      run: mvn --file ./pom.xml test
     - name: STEP 5 -> Deploy to Heroku
       uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
         heroku_app_name: "weatherapp-kalilo"
         heroku_email: "kalilo555@usp.br"
-        heroku_jar_file: "./cityweather/target/Cityweather-1.0-SNAPSHOT-jar-with-dependencies.jar"
+        heroku_jar_file: "./target/Cityweather-1.0-SNAPSHOT-jar-with-dependencies.jar"
