--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,8 +15,8 @@ jobs:
       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
     steps:
-    - uses: actions/checkout@v3
-    - name: STEP 1 -> Set up JDK 1.8
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: '1.8'
@@ -24,19 +24,13 @@ jobs:
         cache: maven
     - name: Debug HEROKU_API_KEY
       run: echo $HEROKU_API_KEY
-    - name: STEP 2 -> Login to Heroku
-      uses: akhileshns/heroku-deploy@v3.12.12
-      with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        heroku_app_name: "weatherapp-kalilo"
-        heroku_email: "kalilo555@usp.br"
-    - name: STEP 3 -> Build with Maven
+    - name: Build with Maven
       run: mvn --file ./pom.xml clean install
-    - name: STEP 4 -> Test with Maven
-      run: mvn --file ./pom.xml test
-    - name: STEP 5 -> Deploy to Heroku
+    - name: Deploy to Heroku
       uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
         heroku_app_name: "weatherapp-kalilo"
         heroku_email: "kalilo555@usp.br"
+        war_file: "./target/Cityweather.war"
+
