--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,16 +21,16 @@ jobs:
       with:
         java-version: '1.8'
         distribution: 'adopt'
-        cache: maven
     - name: Debug HEROKU_API_KEY
       run: echo $HEROKU_API_KEY
     - name: Build with Maven
-      run: mvn --file ./pom.xml clean install
+      run: mvn --file ./pom.xml clean package
+    - name: Test with Maven
+      run: mvn --file ./pom.xml test
     - name: Deploy to Heroku
       uses: akhileshns/heroku-deploy@v3.12.12
       with:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
         heroku_app_name: "weatherapp-kalilo"
         heroku_email: "kalilo555@usp.br"
-        war_file: "./target/Cityweather.war"
-
+        heroku_jar: "target/Cityweather.war"
