--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,10 +21,13 @@ jobs:
       with:
         java-version: '1.8'
         distribution: 'adopt'
+        cache: maven
     - name: Debug HEROKU_API_KEY
       run: echo $HEROKU_API_KEY
     - name: Build with Maven
-      run: mvn --file ./pom.xml clean package
+      run: mvn --file ./pom.xml clean install
+    - name: Move generated .war file
+      run: mv target/Cityweather.war .
     - name: Test with Maven
       run: mvn --file ./pom.xml test
     - name: Deploy to Heroku
@@ -33,4 +36,4 @@ jobs:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
         heroku_app_name: "weatherapp-kalilo"
         heroku_email: "kalilo555@usp.br"
-        heroku_jar: "target/Cityweather.war"
+        heroku_jar: "Cityweather.war"
