--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build with Maven
       run: mvn --file ./pom.xml clean install
     - name: Move generated .war file
-      run: mv target/Cityweather.war .
+      run: mv target/Cityweather-1.0.war .
     - name: Test with Maven
       run: mvn --file ./pom.xml test
     - name: Deploy to Heroku
@@ -36,4 +36,4 @@ jobs:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
         heroku_app_name: "weatherapp-kalilo"
         heroku_email: "kalilo555@usp.br"
-        heroku_jar: "Cityweather.war"
+        heroku_jar: "Cityweather-1.0.war"
